--- a/src/style.scss
+++ b/src/style.scss
@@ -7,3 +7,18 @@ h2 {
   font-family: 'Roboto', sans-serif;
   font-size: 50px;
 }
+
+#indicators {
+  display: flex;
+  flex-direction: row;
+}
+
+.indicator {
+  background: red;
+  width: 100px;
+  height: 100px;
+  margin: 20px;
+  border-radius: 50%;
+  box-shadow: 4px 4px 2px #888;
+
+}
