--- a/src/style.scss
+++ b/src/style.scss
@@ -20,5 +20,13 @@ h2 {
   margin: 20px;
   border-radius: 50%;
   box-shadow: 4px 4px 2px #888;
+  cursor: pointer;
 
+  &:hover {
+    background: green;
+  }
+
+  &.disabled {
+    background: grey;
+  }
 }
