--- a/src/style.scss
+++ b/src/style.scss
@@ -1,14 +1,71 @@
 html, body {
   margin: 0;
-  padding: 0;
+  padding: 20px;
 }
 
-h2 {
+* {
   font-family: 'Roboto', sans-serif;
-  font-size: 50px;
+}
+
+h1 {
+  font-size: 72px;
+}
+
+.input-section {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 15px 0;
+  label {
+    width: 300px;
+    padding-right: 20px;
+    font-size: 30px;
+  }
+
+  input {
+    outline: 0;
+    padding: 10px;
+    border-radius: 3px;
+    border: 1px solid #888;
+    font-size: 30px;
+  }
+}
+
+.start-stop-section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+  button {
+    margin-right: 20px;
+    padding: 10px 15px;
+    border-radius: 10px;
+    outline: 0;
+    border: 0;
+    color: white;
+    cursor: pointer;
+    transition: 50ms ease-in-out;
+    font-size: 20px;
+  }
+
+  #start {
+    background: green;
+    &:hover {
+      background: #88888888;
+    }
+  }
+
+  #stop {
+    background: red;
+    &:hover {
+      background: #88888888;
+    }
+  }
 }
 
 #indicators {
+  margin-top: 100px;
   display: flex;
   flex-direction: row;
 }
